# autolua

./: .gitignore  .project  LICENSE  README.md  addr2line.bat  build.gradle  gradlew.bat  settings.gradle
androidlua/: build.gradle
app/: build.gradle
app/libs/: HotReload-release.aar  mlncore-release.aar  mlnservics-release.aar
app/release/: output-metadata.json
autolua/: .project  build.gradle
autolua/src/main/jni/: Bitmap.h  CMakeLists.txt  autolua.cpp  autolua.h  display.cpp  display.h  luajni.h  thread.h
autolua/src/main/jni/autolua/: CMakeLists.txt  autolua.c
autolua/src/main/jni/display/: CMakeLists.txt  display.c  display.cpp  display.h
autolua/src/main/jni/input/: CMakeLists.txt  input.cpp  input.h  mlua.h
autolua/src/main/jni/lua/: CMakeLists.txt  lapi.c  lauxlib.c  lauxlib.h  lcode.c  ldo.c  ldo.h  lgc.c  liolib.c  llimits.h  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.h  lstring.c  lstrlib.c  ltable.c  ltable.h  ltablib.c  lua.hpp  luaconf.h  lundump.c  lvm.c
autolua/src/main/jni/screen/: CMakeLists.txt  screen.c
autolua/src/main/jni/thread/: CMakeLists.txt  thread.c  thread.cpp  thread.h
autolua/src/main/jni/view/: CMakeLists.txt  base.h  color.h  luaview.cpp  luaview.h
autolua/src/main/jni/viewer/: Bitmap.h  CMakeLists.txt  base.h  color.h  feature.h  luaViewer.cpp  luaViewer.h  mlua.h  viewer.h
docs/: sdk_switch.md
docs/MomoKit/: Alert.lua  AnimType.lua  Animator.lua  Application.lua  Array.lua  BreakMode.lua  CachePolicy.lua  CanvasAnimation.lua  Clipboard.lua  CollectionView.lua  CollectionViewAdapter.lua  CollectionViewAutoFitAdapter.lua  CollectionViewLayout.lua  Color.lua  ContentMode.lua  CornerManager.lua  Dialog.lua  EditTextView.lua  EditTextViewInputMode.lua  EncType.lua  ErrorKey.lua  File.lua  FontStyle.lua  GlobalEvent.lua  GradientType.lua  Gravity.lua  Http.lua  IMJ.lua  ImageButton.lua  ImageView.lua  InterpolatorType.lua  Label.lua  LinearLayout.lua  Map.lua  (+42 more)
plan/: autolua.plantuml  framework.plantuml
sample/: .project  build.gradle
think/: README.md  luaAPI.md
(+301 files in other folders)
